Refactor: Migrate some agent workspace components to project-specific directories